fixed issues with gallery spacing

--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -117,6 +117,7 @@ body.sidebar-open .main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 #answer-box {
@@ -128,13 +129,13 @@ body.sidebar-open .main {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 300px);
-    grid-auto-rows: 300px;
+    grid-template-columns: repeat(auto-fit, minmax(19.688rem, 19.688rem));
     gap: 20px;
     margin-top: 50px;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    justify-content: center
 }
 
 .gallery-item {
@@ -149,6 +150,7 @@ body.sidebar-open .main {
     height: 100%;
     display: block;
     transition: transform 0.5s ease;
+    object-fit: cover;
 }
 
 .gallery-item:hover img {
@@ -187,7 +189,7 @@ body.sidebar-open .main {
     gap: 10px;
     align-items: center;
     margin-top: 10px;
-    width: 650px
+    width: 600px
 }
 
 .tag {
